autotests/syntax-tests-simple-refal/tests/negative/negative142.sref
Name { Name Name , Name Name : Name ( Name ) [ Name ] = ; ,
{ } { ( ( ) e.Var $ENTRY Name Name ) Name , : = : = ; = ; }
Name : { } : , : = : = ; = ; } ; 